--- a/index.html
+++ b/index.html
@@ -14,14 +14,16 @@
 <body>
     <main>
         <section id='search'>
-            <input type="text" placeholder="Wpisz serial...">
+            <input id='search-input' type="text" placeholder="Write the title...">
         </section>
         <section class="series-section">
             <div class='showbox'>
                 <img src="" alt="">
                 <div class="showtitle">Friend</div>
                 <div class="show-genres">Comedy</div>
-                <div class="show-overview">info</div>
+                <div class="show-overview">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi autem
+                    quisquam quia veniam blanditiis, quibusdam inventore illum maiores quidem rerum? Porro dolores
+                    laboriosam, harum iure dolor accusamus vel distinctio incidunt!</div>
             </div>
         </section>
         <section class="tv-maze-info">
